--- a/.github/workflows/push-build.yaml
+++ b/.github/workflows/push-build.yaml
@@ -4,8 +4,9 @@ on:
     branches:
       - master
       - release-*
-    tags:
-      - v*
+  workflow_run:
+    workflows: ["Tag"]
+    types: [completed]
 
 defaults:
   run:
@@ -15,7 +16,9 @@ defaults:
 jobs:
   push-image-to-container-registry:
     runs-on: ubuntu-18.04
-    if: github.repository == 'rook/rook'
+    if: g|
+      ithub.repository == 'koor-tech/koor' &&
+      (github.event_name == 'push' || github.event.workflow_run.conclusion == 'success')
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -43,7 +46,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_USR }}
           aws-secret-access-key: ${{ secrets.AWS_PSW }}
-          aws-region: us-east-1
+          aws-region: eu-central-1
 
       # creating custom env var
       - name: set env
@@ -56,7 +59,7 @@ jobs:
           python3 -m pip install --upgrade pip setuptools wheel
           sudo apt-get -q update
           sudo apt-get -q install -y python3-pygit2
-      
+
       - name: Configure git user
         run: |
           # Use our Rook "service account"
