--- a/.github/workflows/push-build.yaml
+++ b/.github/workflows/push-build.yaml
@@ -4,8 +4,9 @@ on:
     branches:
       - master
       - release-*
-    tags:
-      - v*
+  workflow_run:
+    workflows: ["Tag"]
+    types: [completed]
 
 defaults:
   run:
@@ -18,7 +19,9 @@ permissions:
 jobs:
   push-image-to-container-registry:
     runs-on: ubuntu-18.04
-    if: github.repository == 'rook/rook'
+    if: g|
+      ithub.repository == 'koor-tech/koor' &&
+      (github.event_name == 'push' || github.event.workflow_run.conclusion == 'success')
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -46,7 +49,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_USR }}
           aws-secret-access-key: ${{ secrets.AWS_PSW }}
-          aws-region: us-east-1
+          aws-region: eu-central-1
 
       # creating custom env var
       - name: set env
