build: added build changes from build-customizable branch
Adjust helm chat pushing to point to koor's helm chart repo.

Signed-off-by: gauravsitlani <gauravsitlani@riseup.net>

--- a/.github/workflows/push-build.yaml
+++ b/.github/workflows/push-build.yaml
@@ -19,8 +19,8 @@ permissions:
 jobs:
   push-image-to-container-registry:
     runs-on: ubuntu-18.04
-    if: g|
-      ithub.repository == 'koor-tech/koor' &&
+    if: |
+      github.repository == 'koor-tech/koor' &&
       (github.event_name == 'push' || github.event.workflow_run.conclusion == 'success')
     steps:
       - name: checkout
