--- a/deploy/examples/operator.yaml
+++ b/deploy/examples/operator.yaml
@@ -472,7 +472,7 @@ spec:
       serviceAccountName: rook-ceph-system
       containers:
         - name: rook-ceph-operator
-          image: rook/ceph:master
+          image: koorinc/ceph:master
           args: ["ceph", "operator"]
           securityContext:
             runAsNonRoot: true
