--- a/deploy/examples/operator-openshift.yaml
+++ b/deploy/examples/operator-openshift.yaml
@@ -550,7 +550,7 @@ spec:
       serviceAccountName: rook-ceph-system
       containers:
         - name: rook-ceph-operator
-          image: koorinc/ceph:master
+          image: koorinc/ceph:v1.0.0
           args: ["ceph", "operator"]
           securityContext:
             runAsNonRoot: true
