--- a/deploy/charts/rook-ceph-cluster/Chart.yaml
+++ b/deploy/charts/rook-ceph-cluster/Chart.yaml
@@ -10,3 +10,7 @@ dependencies:
   - name: library
     version: "0.0.1"
     repository: "file://../library"
+  - name: extended-ceph-exporter
+    version: "1.1.0"
+    repository: "https://koor-tech.github.io/extended-ceph-exporter"
+    condition: extendedCephExporter.enabled
