ci: fix docs check issues
This fixes the pygit2 pip install for the mkdocs build/ check.

Signed-off-by: Alexander Trost <galexrt@googlemail.com>

--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -34,7 +34,9 @@ jobs:
           python-version: 3.9
 
       - name: Install mkdocs and dependencies
-        run: cd build/release/ && make deps.docs
+        run: |
+          sudo apt-get -q install -y python3-pygit2
+          cd build/release/ && make deps.docs
 
       - name: Build documentation using mkdocs
         run: make docs-build
