--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,15 +21,17 @@ theme:
   favicon: https://koor.tech/images/favicon.svg
   logo: https://koor.tech/images/logo.svg
   palette:
-    - scheme: "default"
+    - media: "(prefers-color-scheme: light)"
+      scheme: "default"
       primary: "koor"
       accent: "deep orange"
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
-    - scheme: "slate"
-      primary: "koor"
-      accent: "red"
+    - media: "(prefers-color-scheme: dark)"
+      scheme: "slate"
+      primary: "koor-dark"
+      accent: "deep orange"
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
