--- a/deploy/examples/crds.yaml
+++ b/deploy/examples/crds.yaml
@@ -1021,7 +1021,9 @@ spec:
                             properties:
                               roles:
                                 description: Respective roles of the user which is needed for the same
-                                type: string
+                                items:
+                                  type: string
+                                type: array
                               username:
                                 description: Name of the user created
                                 type: string
