ci: push build workflow amend
Signed-off-by: Deepika Upadhyay <deepika@koor.tech>

--- a/.github/workflows/tmate_debug/action.yml
+++ b/.github/workflows/tmate_debug/action.yml
@@ -11,7 +11,7 @@ runs:
       shell: bash --noprofile --norc -eo pipefail -x {0}
       run: |
         # Enable tmate only in the Rook fork, where the USE_TMATE secret is set in the repo, or if the action is re-run
-        if [ "$GITHUB_REPOSITORY_OWNER" = "rook" ] || [ -n "${{ inputs.use-tmate }}" ] || [ "$GITHUB_RUN_ATTEMPT" -gt 1 ]; then
+        if [ "$GITHUB_REPOSITORY_OWNER" = "koor-tech" ] || [ -n "${{ inputs.use-tmate }}" ] || [ "$GITHUB_RUN_ATTEMPT" -gt 1 ]; then
           echo USE_TMATE=1 >> $GITHUB_ENV
         fi
 
