--- a/deploy/charts/rook-ceph/templates/resources.yaml
+++ b/deploy/charts/rook-ceph/templates/resources.yaml
@@ -1002,6 +1002,43 @@ spec:
                     ssl:
                       description: SSL determines whether SSL should be used
                       type: boolean
+                    sso:
+                      description: SSO determines whether to enable SSO for dashboard
+                      properties:
+                        baseUrl:
+                          description: If users that login through SSO should be auto created
+                          type: string
+                        enabled:
+                          description: Enabled determines whether to enable SSO
+                          type: boolean
+                        entityID:
+                          description: To be used when more than one entity id exists on the IdP metadata
+                          type: string
+                        idpAttributes:
+                          description: IDP Attributes that should be used to get the username from the authentication response. Defaults to uid.
+                          properties:
+                            username:
+                              description: It should be used to get the username from the authentication response. Defaults to uid.
+                              type: string
+                          type: object
+                        idpMetadataUrl:
+                          description: URL to IDP Metadata
+                          type: string
+                        users:
+                          description: List of users to be created with a respective role from the admin side
+                          items:
+                            properties:
+                              roles:
+                                description: Respective roles of the user which is needed for the same
+                                items:
+                                  type: string
+                                type: array
+                              username:
+                                description: Name of the user created
+                                type: string
+                            type: object
+                          type: array
+                      type: object
                     urlPrefix:
                       description: URLPrefix is a prefix for all URLs to use the dashboard with a reverse proxy
                       type: string
