Revert "mgr: remove mgr sidecar"
This reverts commit ff75ec96b7af164027da51bd8e865a8247ff9000.

Signed-off-by: Redouane Kachach <rkachach@redhat.com>
(cherry picked from commit 456a0c328c25f44170727936219cfa75dbcbaa58)

--- a/deploy/examples/cluster.yaml
+++ b/deploy/examples/cluster.yaml
@@ -227,6 +227,7 @@ spec:
   #   osd-ssd:
   #   osd-nvme:
   #   prepareosd:
+  #   mgr-sidecar:
   #   crashcollector:
   #   logcollector:
   #   cleanup:
